[gd_scene load_steps=7 format=3 uid="uid://r1sps030g7xa"]

[ext_resource type="Shader" uid="uid://hayrtmfb5od" path="res://scenes/ui/shop.gdshader" id="1_ahsc1"]
[ext_resource type="Script" uid="uid://dsgcjhdpfjvw2" path="res://scenes/ui/shop.gd" id="1_kdvrj"]
[ext_resource type="FontFile" uid="uid://xf3kbuv42dt" path="res://assets/Fonts/Poppins-Black.ttf" id="2_2i61c"]
[ext_resource type="FontFile" uid="uid://c3akd7isgdvg6" path="res://assets/Fonts/Poppins-Bold.ttf" id="3_85p0y"]
[ext_resource type="FontFile" uid="uid://cfa5c0prw4wdk" path="res://assets/Fonts/Poppins-ExtraBold.ttf" id="4_85p0y"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8v20v"]
shader = ExtResource("1_ahsc1")

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kdvrj")

[node name="Background" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_8v20v")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_constants/separation = 20
alignment = 2

[node name="CoinsPanel" type="PanelContainer" parent="TopBar"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TopBar/CoinsPanel"]
layout_mode = 2

[node name="CoinsIcon" type="Label" parent="TopBar/CoinsPanel/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2i61c")
theme_override_font_sizes/font_size = 32
text = "ü™ô"

[node name="CoinsLabel" type="Label" parent="TopBar/CoinsPanel/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_85p0y")
theme_override_font_sizes/font_size = 28
text = "500"

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 70.0
offset_bottom = 93.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_2i61c")
theme_override_font_sizes/font_size = 48
text = "WEAPON SHOP"
horizontal_alignment = 1

[node name="WeaponScroll" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -502.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 0
horizontal_scroll_mode = 0

[node name="WeaponContainer" type="HBoxContainer" parent="WeaponScroll"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="BackButton" type="Button" parent="."]
custom_minimum_size = Vector2(150, 50)
layout_mode = 1
offset_right = 153.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("4_85p0y")
theme_override_font_sizes/font_size = 24
action_mode = 0
text = "‚¨ÖÔ∏è BACK"
flat = true
